# c-unittest-example

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: workflow.yml
cmake/: CMocka.cmake  CodeCov.cmake
include/: add.h
src/: add.c
test/: CMakeLists.txt  add_tests.c  test.h
